--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="asset/style.css" />
+  </head>
   <body>
     <h1>Bonjour</h1>
+    <h2>Je suis à l'Adrec</h2>
   </body>
 </html>
